@@ -229,7 +229,8 @@ if ($is_windows || $is_solaris) {
 if ($is_windows) {
 	push @srcs, glob 'deps/libgit2/src/{win32,compat}/*.c';
 
-	$def .= ' -DWIN32 -DGIT_WIN32';
+	$def .= ' -DWIN32 -DGIT_WIN32 -DGIT_WINHTTP';
+	$lib .= ' -lwinhttp -lrpcrt4 -lcrypt32';
 
 	if ($is_msvc) {
 		# visual studio compiler
@@ -261,6 +262,26 @@ sub MY::c_o {
 	\$(CCCMD) \$(CCCDLFLAGS) "-I\$(PERL_INC)" \$(PASTHRU_DEFINE) \$(DEFINE) \$*.c $out_switch\$@
 };
 	return $line;
+}
+
+sub MY::postamble {
+	if ($is_windows && !$is_msvc) {
+		my $def_file = "deps/libgit2/deps/winhttp/winhttp.def";
+		if ($Config{ptrsize} == 8) {
+			$def_file = "deps/libgit2/deps/winhttp/winhttp64.def";
+		}
+
+		my $line = qq{
+deps/libgit2/src/transports/winhttp.c: libwinhttp.a
+
+libwinhttp.a:
+	dlltool -d $def_file -k -D winhttp.dll -l libwinhttp.a
+		};
+
+		return $line;
+	}
+
+	return '';
 }
 
 # This Makefile.PL for {{ $distname }} was generated by Dist::Zilla.
